--- a/windows/main/main_window.ui
+++ b/windows/main/main_window.ui
@@ -16,19 +16,70 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="leftMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="topMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="rightMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="bottomMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <item>
-     <widget class="QTreeView" name="uiCompView"/>
+     <widget class="QTabWidget" name="uiCentralWidget">
+      <property name="tabPosition">
+       <enum>QTabWidget::West</enum>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="uiCompPageFrame">
+       <attribute name="title">
+        <string>Components Tree</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="uiArchivePageFrame">
+       <attribute name="title">
+        <string>Hardware Archive</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+       </layout>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -45,30 +96,21 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="uiActNew"/>
-    <addaction name="uiActOpen"/>
-    <addaction name="uiActSave"/>
-    <addaction name="uiActSave_As"/>
    </widget>
    <widget class="QMenu" name="uiMenuEdit">
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="uiActAddNode"/>
-    <addaction name="uiActRemoveNode"/>
    </widget>
    <widget class="QMenu" name="uiMenuView">
     <property name="title">
      <string>View</string>
     </property>
-    <addaction name="uiActExpand"/>
-    <addaction name="uiActCollapse"/>
    </widget>
    <widget class="QMenu" name="uiMenuSettings">
     <property name="title">
      <string>Settings</string>
     </property>
-    <addaction name="uiActOpenSettingsWindow"/>
    </widget>
    <addaction name="uiMenuFile"/>
    <addaction name="uiMenuEdit"/>
