--- a/windows/pages/comp_page/popup_editor/popup_editor.ui
+++ b/windows/pages/comp_page/popup_editor/popup_editor.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>comp_editor</class>
- <widget class="QWidget" name="comp_editor">
+ <widget class="QWidget" name="popup_editor">
   <property name="geometry">
    <rect>
     <x>0</x>
